# ibvs_nmpc_px4

./: .gitignore  LICENSE  README.md  Translational_drone_acados_ocp.json  acados_sim_Translational_drone.json  gen_ring_points.py  simulation_iris_aruco.launch  simulation_iris_circle.launch
.catkin_tools/cache/: workspace_packages
.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
c_generated_code/: acados_sim_solver_Translational_drone.c  acados_sim_solver_Translational_drone.h  acados_solver_Translational_drone.c  acados_solver_Translational_drone.h  acados_solver_sfunction_Translational_drone.c
c_generated_code/Translational_drone_constraints/: Translational_drone_h_constraint.h
c_generated_code/Translational_drone_model/: Translational_drone_model.h
devel/: .catkin  setup.sh
devel/include/custom_msgs/: CircleRecog.h  ControlCommand.h  FlatTarget.h  ImgRecog.h  ParkingRecog.h  PurposeWp.h  depthRecog.h
devel/include/ibvs_pkg/: Marker.h  point_xyz.h  xyzyawVel.h
devel/lib/circle_detection/: circle_detection_node
devel/lib/geometric_controller/: geometric_controller_node
devel/lib/ibvs_pkg/: ibvs_aruco  ibvs_circle
devel/lib/mpc_pkg/: ibvs_mpc1_controller_node
devel/lib/pkgconfig/: catkin_simple.pc  circle_detection.pc  controller_msgs.pc  custom_msgs.pc  eigen_catkin.pc  geometric_controller.pc  ibvs_pkg.pc  mav_msgs.pc  mav_planning_msgs.pc  mav_state_machine_msgs.pc  mav_system_msgs.pc  mpc_pkg.pc  trajectory_publisher.pc
devel/lib/trajectory_publisher/: trajectory_publisher
devel/share/catkin_simple/cmake/: catkin_simple-extras.cmake  catkin_simpleConfig.cmake
devel/share/circle_detection/cmake/: circle_detectionConfig.cmake
devel/share/controller_msgs/cmake/: controller_msgs-msg-paths.cmake  controller_msgsConfig.cmake
devel/share/custom_msgs/cmake/: custom_msgs-msg-paths.cmake  custom_msgsConfig.cmake
devel/share/eigen_catkin/cmake/: eigen_catkinConfig.cmake
devel/share/geometric_controller/cmake/: geometric_controllerConfig.cmake
devel/share/ibvs_pkg/cmake/: ibvs_pkg-msg-extras.cmake  ibvs_pkg-msg-paths.cmake  ibvs_pkgConfig.cmake
devel/share/mav_msgs/cmake/: mav_msgs-msg-extras.cmake  mav_msgs-msg-paths.cmake  mav_msgsConfig.cmake
devel/share/mav_planning_msgs/cmake/: mav_planning_msgs-msg-paths.cmake  mav_planning_msgsConfig.cmake
devel/share/mav_state_machine_msgs/cmake/: mav_state_machine_msgs-msg-extras.cmake  mav_state_machine_msgs-msg-paths.cmake  mav_state_machine_msgsConfig.cmake
devel/share/mav_system_msgs/cmake/: mav_system_msgs-msg-paths.cmake  mav_system_msgsConfig.cmake
logs/circle_detection/: build.make.002.log.stderr
logs/custom_msgs/: build.check.011.log.stderr  build.check.013.log.stderr  build.check.014.log.stderr
logs/geometric_controller/: build.check.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr
logs/ibvs_pkg/: build.make.000.log.stderr  build.make.003.log.stderr
logs/mpc_pkg/: build.check.004.log.stderr  build.make.000.log.stderr  build.make.005.log.stderr
logs/trajectory_publisher/: build.make.000.log.stderr
src/: .rosinstall  .rosinstall.bak
src/circle-detection/: CMakeLists.txt  D435Launch.launch  README.en.md  README.md  circle_detect.launch
src/circle-detection/include/circle_detection/: CircleDetection.h
src/circle-detection/src/: CircleDetection.cpp  ED-LIB.cpp  circle_detection_node.cpp
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: CircleRecog.msg  ImgRecog.msg  ParkingRecog.msg  PurposeWp.msg  depthRecog.msg
src/ibvs_pkg/: CMakeLists.txt  package.xml
src/ibvs_pkg/config/: params_hummingbird.yaml  params_iris.yaml
src/ibvs_pkg/include/: ibvs_aruco.h  ibvs_circle.h  ibvs_description.h
src/ibvs_pkg/launch/: ibvs_aruco.launch  ibvs_circle.launch  ibvs_pkg.launch
src/ibvs_pkg/msg/: Marker.msg  point_xyz.msg  xyzyawVel.msg
src/ibvs_pkg/src/: ibvs_aruco.cpp  ibvs_circle.cpp  ibvs_circle_node.cpp  ibvs_description.cpp
src/mavros_controllers/geometric_controller/: CMakeLists.txt
src/mpc_pkg/: CMakeLists.txt  package.xml
src/mpc_pkg/include/ibvs_mpc1/: ibvs_mpc1_controller.h  ibvs_mpc1_params.h  ibvs_mpc1_wrapper.h
src/mpc_pkg/launch/: mpc_acado_controller.launch  mpc_acados_aruco.launch  mpc_acados_circle.launch  mpc_controller.launch
src/mpc_pkg/model/: CMakeCache.txt  Makefile  cmake_install.cmake  quadrotor_model_codegen  quadrotor_model_thrustrates.cpp
src/mpc_pkg/model/quadrotor_mpc_codegen/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
src/mpc_pkg/parameters/: default.yaml
src/mpc_pkg/scripts/: Translational_drone_acados_ocp.json  acados_settings.py  acados_settings1.py  drone_control.py  drone_control1.py  drone_model.py  drone_model1.py  main.py  plotFnc.py  plotTraj.py  trajectory.py  utils.py
src/mpc_pkg/scripts/c_generated_code/: acados_solver_Translational_drone.c  main_Translational_drone.c  make_sfun_Translational_drone.m
src/mpc_pkg/scripts/c_generated_code/Translational_drone_model/: Translational_drone_impl_dae_fun_jac_x_xdot_u.c
src/mpc_pkg/scripts/outputs/: traj_1.npy  traj_2.npy
src/mpc_pkg/src/: ibvs_autopilot_mpc1_instance.cpp  ibvs_mpc1_controller.cpp  ibvs_mpc1_wrapper.cpp
src/mpc_pkg/test/: ibvs_mpc1_node.cpp
src/quadrotor_mpc_acados/full_mpc/: Translational_drone_acados_ocp.json  acados_settings.py  drone_model.py  main.py
src/quadrotor_mpc_acados/hovering_mpc/: Hovering_drone_acados_ocp.json  acados_settings.py  drone_model.py
src/quadrotor_mpc_acados/planar_mpc/: Planar_drone_acados_ocp.json  acados_sim_Planar_drone.json
src/quadrotor_mpc_acados/position_mpc/: Translational_drone_acados_ocp.json  acados_sim_Translational_drone.json  main.py
src/realsense_ros_gazebo/xacro/: depthcam.xacro
src/rpg_mpc/model/: CMakeCache.txt  Makefile  cmake_install.cmake  quadrotor_model_codegen  quadrotor_model_thrustrates.cpp
src/rpg_mpc/src/: mpc_controller.cpp  mpc_wrapper.cpp
src/rpg_quadrotor_control/: dependencies.yaml
(+150 files in other folders)
