<?xml version="1.0"?>
<package format="2">
  <name>mpc_pkg</name>
  <version>0.0.0</version>
  <description>Model Predictive Control for Quadrotors</description>

  <maintainer email="foehn@ifi.uzh.ch">foehnph</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>mav_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>mav_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <depend>autopilot</depend>
  <depend>geometry_msgs</depend>
  <depend>quadrotor_common</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>quadrotor_msgs</depend>

  <export>
  </export>

  <build_depend>ibvs_pkg</build_depend>
  <build_export_depend>ibvs_pkg</build_export_depend>
  <exec_depend>ibvs_pkg</exec_depend>
</package>